force-app/main/default/objects/OpportunityLineItemSchedule/fields/Accrual__c.field-meta.xml
<CustomField>
    <fullName>Accrual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accrual</label>
    <type>Checkbox</type>
</CustomField>