force-app/main/default/objects/OpportunityLineItemSchedule/fields/Accrual_Forecast_Type__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Forecast_Type__c</fullName>
    <formula>IF(AND(Revenue &lt;&gt; 0,
Opportunity_Forecast_Category__c = &quot;Projected&quot;),
IF(ScheduleDate &gt; TODAY(),
&quot;Projected&quot;,
&quot;Contracted&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Forecast Type</label>
    <type>Text</type>
</CustomField>