force-app/main/default/objects/OpportunityLineItemSchedule/fields/Accrual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Revenue__c</fullName>
    <formula>IF(
AND(
Opportunity_Forecast_Category__c = &quot;Projected&quot;,
ScheduleDate &lt; TODAY(),
Revenue &lt;&gt; 0
),
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Revenue</label>
    <type>Checkbox</type>
</CustomField>