force-app/main/default/objects/OpportunityLineItemSchedule/fields/After_Product_True_End_Date__c.field-meta.xml
<CustomField>
    <fullName>After_Product_True_End_Date__c</fullName>
    <formula>IF(ScheduleDate &gt; Product_True_End_Date_LDOM__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether schedule is after product True End Date</inlineHelpText>
    <label>After Product True End Date</label>
    <type>Checkbox</type>
</CustomField>