force-app/main/default/objects/OpportunityLineItemSchedule/fields/Created_By_F__c.field-meta.xml
<CustomField>
    <fullName>Created_By_F__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By (F)</label>
    <type>Text</type>
</CustomField>