force-app/main/default/objects/OpportunityLineItemSchedule/fields/Created_By_IDF__c.field-meta.xml
<CustomField>
    <fullName>Created_By_IDF__c</fullName>
    <formula>CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By IDF</label>
    <type>Text</type>
</CustomField>