force-app/main/default/objects/OpportunityLineItemSchedule/fields/Flow_Product_Holder__c.field-meta.xml
<CustomField>
    <fullName>Flow_Product_Holder__c</fullName>
    <label>Flow Product Holder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billback</fullName>
            </value>
            <value>
                <fullName>Campus Programs</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Creative - Marketing Services</fullName>
            </value>
            <value>
                <fullName>Default Product</fullName>
            </value>
            <value>
                <fullName>Excess / Savings</fullName>
            </value>
            <value>
                <fullName>Experiential (Management Fee)</fullName>
            </value>
            <value>
                <fullName>Experiential (Phone and Insurance)</fullName>
            </value>
            <value>
                <fullName>Experiential (Warehouse)</fullName>
            </value>
            <value>
                <fullName>Experiential (Warehouse Handling)</fullName>
            </value>
            <value>
                <fullName>Hospitality Management</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Media Buy Fee</fullName>
            </value>
            <value>
                <fullName>Media Rights Advisory</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Income</fullName>
            </value>
            <value>
                <fullName>Prebill</fullName>
            </value>
            <value>
                <fullName>Production and Fees</fullName>
            </value>
            <value>
                <fullName>R&amp;I - Audience Intelligence</fullName>
            </value>
            <value>
                <fullName>R&amp;I - Performance Management</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>