force-app/main/default/objects/OpportunityLineItemSchedule/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <formula>LastModifiedBy.FirstName+&quot; &quot;+ LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By</label>
    <type>Text</type>
</CustomField>