force-app/main/default/objects/OpportunityLineItemSchedule/fields/Modified_By_F__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_F__c</fullName>
    <formula>LastModifiedBy.FirstName &amp;&quot; &quot;&amp; LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified By (F)</label>
    <type>Text</type>
</CustomField>