force-app/main/default/objects/OpportunityLineItemSchedule/fields/Modified_by_Integration__c.field-meta.xml
<CustomField>
    <fullName>Modified_by_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modified by Integration</label>
    <type>Checkbox</type>
</CustomField>