force-app/main/default/objects/OpportunityLineItemSchedule/fields/Modified_By_Zero_Revenue_Process__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Zero_Revenue_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modified By Zero Revenue Process</label>
    <type>Checkbox</type>
</CustomField>