force-app/main/default/objects/OpportunityLineItemSchedule/fields/Modified_By_Zero_Revenue_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Zero_Revenue_Process_Date__c</fullName>
    <description>Date field that will be stamped by Admin zero revenue flow</description>
    <label>Modified By Zero Revenue Process Date</label>
    <type>Date</type>
</CustomField>