force-app/main/default/objects/OpportunityLineItemSchedule/fields/Modified_ByF__c.field-meta.xml
<CustomField>
    <fullName>Modified_ByF__c</fullName>
    <formula>LastModifiedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified ByF</label>
    <type>Text</type>
</CustomField>