force-app/main/default/objects/OpportunityLineItemSchedule/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>