force-app/main/default/objects/OpportunityLineItemSchedule/fields/Month_Locked__c.field-meta.xml
<CustomField>
    <fullName>Month_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default = FALSE. Will be set by WD automation. If TRUE, prevent update to record</description>
    <label>Month Locked</label>
    <type>Checkbox</type>
</CustomField>