force-app/main/default/objects/OpportunityLineItemSchedule/fields/OLIID_Text__c.field-meta.xml
<CustomField>
    <fullName>OLIID_Text__c</fullName>
    <formula>CASESAFEID(OpportunityLineItem.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLIID Text</label>
    <type>Text</type>
</CustomField>