force-app/main/default/objects/OpportunityLineItemSchedule/fields/Opportunity_ForceSync__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ForceSync__c</fullName>
    <formula>OpportunityLineItem.Opportunity.ForceSync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ForceSync</label>
    <type>Checkbox</type>
</CustomField>