force-app/main/default/objects/OpportunityLineItemSchedule/fields/Opportunity_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast_Category__c</fullName>
    <formula>OpportunityLineItem.Forecast_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Forecast Category</label>
    <type>Text</type>
</CustomField>