force-app/main/default/objects/OpportunityLineItemSchedule/fields/Opportunity_WD_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_WD_Contract_ID__c</fullName>
    <formula>OpportunityLineItem.Opportunity.WD_Contract_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity WD Contract ID</label>
    <type>Text</type>
</CustomField>