force-app/main/default/objects/OpportunityLineItemSchedule/fields/Original_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Original_Revenue__c</fullName>
    <label>Original Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>