force-app/main/default/objects/OpportunityLineItemSchedule/fields/Outdated_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Outdated_Schedule__c</fullName>
    <formula>IF(
 AND(
  OR(Opportunity_Record_Type__c = &quot;Cycle Direct&quot;, Opportunity_Record_Type__c = &quot;Laundry Service / Cycle&quot;, Opportunity_Record_Type__c = &quot;Marketing&quot;), 
  (YEAR(TODAY())-YEAR(ScheduleDate))*12 + ( MONTH(TODAY())-MONTH(ScheduleDate))&gt;=2
 ),
 true, false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outdated Schedule</label>
    <type>Checkbox</type>
</CustomField>