force-app/main/default/objects/OpportunityLineItemSchedule/fields/Prior_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_Revenue__c</fullName>
    <description>On create = 0. Then if Revenue is updated, = previous revenue</description>
    <label>Prior Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>