force-app/main/default/objects/OpportunityLineItemSchedule/fields/Product_Department__c.field-meta.xml
<CustomField>
    <fullName>Product_Department__c</fullName>
    <description>Product &gt; Department</description>
    <formula>TEXT(OpportunityLineItem.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Department</label>
    <type>Text</type>
</CustomField>