force-app/main/default/objects/OpportunityLineItemSchedule/fields/Product_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Date__c</fullName>
    <formula>OpportunityLineItem.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product End Date</label>
    <type>Date</type>
</CustomField>