force-app/main/default/objects/OpportunityLineItemSchedule/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>OpportunityLineItem.Product_Name__c</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>