force-app/main/default/objects/OpportunityLineItemSchedule/fields/Product_Override_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Product_Override_Revenue_Schedule__c</fullName>
    <formula>OpportunityLineItem.Override_Revenue_Schedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Override Revenue Schedule</label>
    <type>Checkbox</type>
</CustomField>