force-app/main/default/objects/OpportunityLineItemSchedule/fields/Product_True_End_Date_LDOM__c.field-meta.xml
<CustomField>
    <fullName>Product_True_End_Date_LDOM__c</fullName>
    <formula>IF(
  MONTH(OpportunityLineItem.True_End_Date__c) = 12,
  DATE( YEAR(OpportunityLineItem.True_End_Date__c), 12, 31 ),
  DATE( YEAR(OpportunityLineItem.True_End_Date__c), MONTH (OpportunityLineItem.True_End_Date__c) + 1, 1 ) - 1 
)</formula>
    <inlineHelpText>True End Date of the product, converted to last day of the month</inlineHelpText>
    <label>Product True End Date LDOM</label>
    <type>Date</type>
</CustomField>