force-app/main/default/objects/OpportunityLineItemSchedule/fields/Product_Workday_Company__c.field-meta.xml
<CustomField>
    <fullName>Product_Workday_Company__c</fullName>
    <description>Product &gt; Workday Company</description>
    <formula>TEXT(OpportunityLineItem.Workday_Company__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Workday Company</label>
    <type>Text</type>
</CustomField>