force-app/main/default/objects/OpportunityLineItemSchedule/fields/Schedule_Year__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Year__c</fullName>
    <formula>TEXT(YEAR(ScheduleDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Year</label>
    <type>Text</type>
</CustomField>