force-app/main/default/objects/OpportunityLineItemSchedule/fields/ScheduleID18__c.field-meta.xml
<CustomField>
    <fullName>ScheduleID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduleID18</label>
    <type>Text</type>
</CustomField>