force-app/main/default/objects/OpportunityLineItemSchedule/fields/ScheduleID__c.field-meta.xml
<CustomField>
    <fullName>ScheduleID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduleID</label>
    <type>Text</type>
</CustomField>