force-app/main/default/objects/OpportunityLineItemSchedule/fields/ScheduleMonth__c.field-meta.xml
<CustomField>
    <fullName>ScheduleMonth__c</fullName>
    <formula>MONTH( ScheduleDate )</formula>
    <label>ScheduleMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>