force-app/main/default/objects/OpportunityLineItemSchedule/fields/ScheduleYear__c.field-meta.xml
<CustomField>
    <fullName>ScheduleYear__c</fullName>
    <formula>YEAR( ScheduleDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduleYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>